--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(laying_grass)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(laying_grass main.cpp)
+add_executable(laying_grass main.cpp
+        src/Player.h
+        include/Player.cpp)
