--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.29)
 project(laying_grass)
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_EXE_LINKER_FLAGS "-static")
 
 add_executable(laying_grass main.cpp
         include/Player.h
@@ -13,4 +14,8 @@ add_executable(laying_grass main.cpp
         include/Game.h
         src/Game.cpp
         include/Tiles.h
-        src/Tiles.cpp)
+        src/Tiles.cpp
+        src/menu/menu.cpp
+        src/colors.cpp
+        include/colors.h
+        include/menu.h)
